--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="min-h-screen dd grid py-7 ">
-        <div class="bg-[#a9b9c9] min-h-[550px] place-self-center w-11/12 max-w-md py-7 px-5 rounded-lg">
+    <div class="min-h-screen dd grid py-7  ">
+        <div class="bg-[#a9b9c9] min-h-[550px] place-self-center w-11/12 max-w-lg py-7 px-10 rounded-lg max-h-[1000px]">
             <div class="flex flex-col items-center">
                 <h1 class="text-2xl tracking-tighter uppercase py-6 mb-8">Stadium der deutschen Sprache</h1>
                 <hr class="bg-slate-50 py-1 ">
@@ -17,13 +17,16 @@
                     <label class="uppercase text-neutral-600">Write German Word:</label>
                     <input class="rounded-lg border-2 border-solid border-b-gray-600" type="text" id="userInput">
                     <button class="bg-slate-600 rounded-lg p-3 py-1 mt-4 w-full  text-[#ccc] shadow border-none" type="submit">Search</button>
-                    <div id="result" class="flex items-center flex-row mt-10">
+                    <div id="result" class=" mt-10 flex flex-wrap gap-2 justify-start">
                       
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <footer class="flex py-5 flex-row bg-[#c4c6c7] items-center justify-center">
+        <p class="text-slate-900 tracking-tight">Established by Enes KAYA 2024</p>
+    </footer>
     <script src="lang.js"></script>
 </body>
 </html>
